--- a/rustls-mio/Cargo.toml
+++ b/rustls-mio/Cargo.toml
@@ -19,6 +19,7 @@ log = { version = "0.4.4", optional = true }
 rustls = { path = "../rustls" }
 rustls-pemfile = "1.0.0"
 sct = "0.7"
+trust-dns-resolver = { version="0.21.2", features = ["dns-over-rustls", "dns-over-https-rustls"] }
 
 [dev-dependencies]
 docopt = "~1.1"
