--- a/rustls/Cargo.toml
+++ b/rustls/Cargo.toml
@@ -22,6 +22,13 @@ ring = "0.16.20"
 sct = "0.7.0"
 webpki = { version = "0.22.0", features = ["alloc", "std"] }
 
+# Temporary until ring has HPKE.
+# Version 0.0.8 supports draft-cfrg-hpke-08, which corresponds to
+# ECH draft-10, the version currently running on crypto.cloudflare.com.
+hpke-rs = "0.1.0"
+hpke-rs-crypto = "0.1.1"
+hpke-rs-rust-crypto = "0.1.1"
+
 [features]
 default = ["logging", "tls12"]
 logging = ["log"]
